@@ -168,7 +168,7 @@ public class TestRandomChains extends BaseTokenStreamTestCase {
 
   private static final Map<Class<?>, Function<Random, Object>> argProducers =
       Collections.unmodifiableMap(
-          new IdentityHashMap<Class<?>, Function<Random, Object>>() {
+          new IdentityHashMap<>() {
             {
               put(
                   int.class,
@@ -176,7 +176,7 @@ public class TestRandomChains extends BaseTokenStreamTestCase {
                     // TODO: could cause huge ram usage to use full int range for some filters
                     // (e.g. allocate enormous arrays)
                     // return Integer.valueOf(random.nextInt());
-                    return Integer.valueOf(TestUtil.nextInt(random, -50, 50));
+                    return TestUtil.nextInt(random, -50, 50);
                   });
               put(
                   char.class,
@@ -187,7 +187,7 @@ public class TestRandomChains extends BaseTokenStreamTestCase {
                     while (true) {
                       char c = (char) random.nextInt(65536);
                       if (c < '\uD800' || c > '\uDFFF') {
-                        return Character.valueOf(c);
+                        return c;
                       }
                     }
                   });
@@ -202,9 +202,9 @@ public class TestRandomChains extends BaseTokenStreamTestCase {
                     return bytes;
                   });
               put(Random.class, random -> new Random(random.nextLong()));
-              put(Version.class, random -> Version.LATEST);
+              put(Version.class, _ -> Version.LATEST);
               put(AttributeFactory.class, BaseTokenStreamTestCase::newAttributeFactory);
-              put(AttributeSource.class, random -> null); // force IAE/NPE
+              put(AttributeSource.class, _ -> null); // force IAE/NPE
               put(
                   Set.class,
                   random -> {
@@ -242,19 +242,17 @@ public class TestRandomChains extends BaseTokenStreamTestCase {
                   });
               // TODO: don't want to make the exponentially slow ones Dawid documents
               // in TestPatternReplaceFilter, so dont use truly random patterns (for now)
-              put(Pattern.class, random -> Pattern.compile("a"));
+              put(Pattern.class, _ -> Pattern.compile("a"));
               put(
                   Pattern[].class,
-                  random ->
-                      new Pattern[] {Pattern.compile("([a-z]+)"), Pattern.compile("([0-9]+)")});
+                  _ -> new Pattern[] {Pattern.compile("([a-z]+)"), Pattern.compile("([0-9]+)")});
               put(
                   PayloadEncoder.class,
-                  random ->
-                      new IdentityEncoder()); // the other encoders will throw exceptions if tokens
+                  _ -> new IdentityEncoder()); // the other encoders will throw exceptions if tokens
               // arent numbers?
               put(
                   Dictionary.class,
-                  random -> {
+                  _ -> {
                     // TODO: make nastier
                     InputStream affixStream =
                         TestRandomChains.class.getResourceAsStream("simple.aff");
@@ -270,7 +268,7 @@ public class TestRandomChains extends BaseTokenStreamTestCase {
                   });
               put(
                   HyphenationTree.class,
-                  random -> {
+                  _ -> {
                     // TODO: make nastier
                     try {
                       InputSource is =
@@ -382,7 +380,7 @@ public class TestRandomChains extends BaseTokenStreamTestCase {
                   });
               put(
                   SynonymMap.class,
-                  new Function<Random, Object>() {
+                  new Function<>() {
                     @Override
                     public Object apply(Random random) {
                       SynonymMap.Builder b = new SynonymMap.Builder(random.nextBoolean());
@@ -448,12 +446,11 @@ public class TestRandomChains extends BaseTokenStreamTestCase {
                   });
               put(
                   Automaton.class,
-                  random -> {
-                    return Operations.determinize(
-                        new RegExp(AutomatonTestUtil.randomRegexp(random), RegExp.NONE)
-                            .toAutomaton(),
-                        Operations.DEFAULT_DETERMINIZE_WORK_LIMIT);
-                  });
+                  random ->
+                      Operations.determinize(
+                          new RegExp(AutomatonTestUtil.randomRegexp(random), RegExp.NONE)
+                              .toAutomaton(),
+                          Operations.DEFAULT_DETERMINIZE_WORK_LIMIT));
               put(
                   PatternTypingFilter.PatternTypingRule[].class,
                   random -> {
@@ -510,14 +507,14 @@ public class TestRandomChains extends BaseTokenStreamTestCase {
               put(
                   JapaneseTokenizer.Mode.class,
                   random -> jaTokModes[random.nextInt(jaTokModes.length)]);
-              put(org.apache.lucene.analysis.ja.dict.UserDictionary.class, random -> null);
+              put(org.apache.lucene.analysis.ja.dict.UserDictionary.class, _ -> null);
 
               // Nori:
               final var koComplFilterModes = KoreanTokenizer.DecompoundMode.values();
               put(
                   KoreanTokenizer.DecompoundMode.class,
                   random -> koComplFilterModes[random.nextInt(koComplFilterModes.length)]);
-              put(org.apache.lucene.analysis.ko.dict.UserDictionary.class, random -> null);
+              put(org.apache.lucene.analysis.ko.dict.UserDictionary.class, _ -> null);
 
               // Phonetic:
               final var bmNameTypes = org.apache.commons.codec.language.bm.NameType.values();
@@ -554,9 +551,7 @@ public class TestRandomChains extends BaseTokenStreamTestCase {
                   });
 
               // Stempel
-              put(
-                  StempelStemmer.class,
-                  random -> new StempelStemmer(PolishAnalyzer.getDefaultTable()));
+              put(StempelStemmer.class, _ -> new StempelStemmer(PolishAnalyzer.getDefaultTable()));
             }
           });
 
@@ -625,9 +620,9 @@ public class TestRandomChains extends BaseTokenStreamTestCase {
     }
 
     final Comparator<Constructor<?>> ctorComp = Comparator.comparing(Constructor::toGenericString);
-    Collections.sort(tokenizers, ctorComp);
-    Collections.sort(tokenfilters, ctorComp);
-    Collections.sort(charfilters, ctorComp);
+    tokenizers.sort(ctorComp);
+    tokenfilters.sort(ctorComp);
+    charfilters.sort(ctorComp);
     if (VERBOSE) {
       System.out.println("tokenizers = " + tokenizers);
       System.out.println("tokenfilters = " + tokenfilters);
@@ -642,7 +637,7 @@ public class TestRandomChains extends BaseTokenStreamTestCase {
             .filter(c -> c.getName().endsWith("Stemmer"))
             .map(stemmerCast)
             .sorted(Comparator.comparing(Class::getName))
-            .collect(Collectors.toList());
+            .toList();
     if (VERBOSE) {
       System.out.println("snowballStemmers = " + snowballStemmers);
     }
@@ -786,7 +781,7 @@ public class TestRandomChains extends BaseTokenStreamTestCase {
         if (cause instanceof IllegalArgumentException
             || (cause instanceof NullPointerException && Stream.of(args).anyMatch(Objects::isNull))
             || cause instanceof UnsupportedOperationException) {
-          // thats ok, ignore
+          // that's ok, ignore
           if (VERBOSE) {
             System.err.println("Ignoring IAE/UOE/NPE from ctor:");
             cause.printStackTrace(System.err);
