@@ -42,7 +42,7 @@ import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.IntConsumer;
-import java.util.stream.Collectors;
+import java.util.function.IntSupplier;
 import org.apache.lucene.document.Document;
 import org.apache.lucene.document.Field.Store;
 import org.apache.lucene.document.LongPoint;
@@ -74,6 +74,8 @@ import org.apache.lucene.tests.util.TestUtil;
 import org.apache.lucene.util.Accountable;
 import org.apache.lucene.util.BytesRef;
 import org.apache.lucene.util.IOUtils;
+import org.apache.lucene.util.RamUsageEstimator;
+import org.apache.lucene.util.SuppressForbidden;
 
 public class TestLRUQueryCache extends LuceneTestCase {
 
@@ -106,7 +108,7 @@ public class TestLRUQueryCache extends LuceneTestCase {
         new LRUQueryCache(
             1 + random().nextInt(20),
             1 + random().nextInt(10000),
-            context -> random().nextBoolean(),
+            _ -> random().nextBoolean(),
             Float.POSITIVE_INFINITY);
     Directory dir = newDirectory();
     final RandomIndexWriter w = new RandomIndexWriter(random(), dir);
@@ -125,7 +127,7 @@ public class TestLRUQueryCache extends LuceneTestCase {
     final SearcherManager mgr = new SearcherManager(w.w, applyDeletes, false, searcherFactory);
     final AtomicBoolean indexing = new AtomicBoolean(true);
     final AtomicReference<Throwable> error = new AtomicReference<>();
-    final int numDocs = atLeast(1000);
+    final int numDocs = atLeast(257);
     Thread[] threads = new Thread[3];
     threads[0] =
         new Thread() {
@@ -198,7 +200,7 @@ public class TestLRUQueryCache extends LuceneTestCase {
                                         .map(
                                             filterCollector ->
                                                 (DummyTotalHitCountCollector) filterCollector.in)
-                                        .collect(Collectors.toList()));
+                                        .toList());
                               }
                             });
                     assertEquals(totalHits2, totalHits1);
@@ -234,6 +236,7 @@ public class TestLRUQueryCache extends LuceneTestCase {
     }
   }
 
+  @SuppressForbidden(reason = "Thread sleep")
   public void testLRUEviction() throws Exception {
     Directory dir = newDirectory();
     final RandomIndexWriter w = new RandomIndexWriter(random(), dir);
@@ -249,7 +252,7 @@ public class TestLRUQueryCache extends LuceneTestCase {
     final DirectoryReader reader = w.getReader();
     final IndexSearcher searcher = newSearcher(reader);
     final LRUQueryCache queryCache =
-        new LRUQueryCache(2, 100000, context -> true, Float.POSITIVE_INFINITY);
+        new LRUQueryCache(2, 100000, _ -> true, Float.POSITIVE_INFINITY);
 
     final Query blue = new TermQuery(new Term("color", "blue"));
     final Query red = new TermQuery(new Term("color", "red"));
@@ -339,7 +342,7 @@ public class TestLRUQueryCache extends LuceneTestCase {
     final Query query2 = new TermQuery(new Term("color", "blue"));
 
     final LRUQueryCache queryCache =
-        new LRUQueryCache(Integer.MAX_VALUE, Long.MAX_VALUE, context -> true, 1);
+        new LRUQueryCache(Integer.MAX_VALUE, Long.MAX_VALUE, _ -> true, 1);
     searcher.setQueryCache(queryCache);
     searcher.setQueryCachingPolicy(ALWAYS_CACHE);
 
@@ -364,7 +367,7 @@ public class TestLRUQueryCache extends LuceneTestCase {
         new LRUQueryCache(
             1 + random().nextInt(5),
             1 + random().nextInt(10000),
-            context -> random().nextBoolean(),
+            _ -> random().nextBoolean(),
             Float.POSITIVE_INFINITY);
     // an accumulator that only sums up memory usage of referenced filters and doc id sets
     final RamUsageTester.Accumulator acc =
@@ -449,11 +452,19 @@ public class TestLRUQueryCache extends LuceneTestCase {
   /** A query that doesn't match anything */
   private static class DummyQuery extends Query {
 
-    private static int COUNTER = 0;
+    private static final IntSupplier COUNTER =
+        new IntSupplier() {
+          int counter = 0;
+
+          @Override
+          public int getAsInt() {
+            return counter++;
+          }
+        };
     private final int id;
 
     DummyQuery() {
-      id = COUNTER++;
+      id = COUNTER.getAsInt();
     }
 
     @Override
@@ -461,7 +472,7 @@ public class TestLRUQueryCache extends LuceneTestCase {
         throws IOException {
       return new ConstantScoreWeight(this, boost) {
         @Override
-        public Scorer scorer(LeafReaderContext context) throws IOException {
+        public ScorerSupplier scorerSupplier(LeafReaderContext context) throws IOException {
           return null;
         }
 
@@ -498,7 +509,7 @@ public class TestLRUQueryCache extends LuceneTestCase {
   @AwaitsFix(bugUrl = "https://issues.apache.org/jira/browse/LUCENE-7595")
   public void testRamBytesUsedConstantEntryOverhead() throws IOException {
     final LRUQueryCache queryCache =
-        new LRUQueryCache(1000000, 10000000, context -> true, Float.POSITIVE_INFINITY);
+        new LRUQueryCache(1000000, 10000000, _ -> true, Float.POSITIVE_INFINITY);
 
     final RamUsageTester.Accumulator acc =
         new RamUsageTester.Accumulator() {
@@ -555,7 +566,7 @@ public class TestLRUQueryCache extends LuceneTestCase {
   }
 
   /** DummyQuery with Accountable, pretending to be a memory-eating query */
-  private class AccountableDummyQuery extends DummyQuery implements Accountable {
+  private static class AccountableDummyQuery extends DummyQuery implements Accountable {
 
     @Override
     public long ramBytesUsed() {
@@ -565,7 +576,7 @@ public class TestLRUQueryCache extends LuceneTestCase {
 
   public void testCachingAccountableQuery() throws IOException {
     final LRUQueryCache queryCache =
-        new LRUQueryCache(1000000, 10000000, context -> true, Float.POSITIVE_INFINITY);
+        new LRUQueryCache(1000000, 10000000, _ -> true, Float.POSITIVE_INFINITY);
 
     Directory dir = newDirectory();
     final RandomIndexWriter w = new RandomIndexWriter(random(), dir);
@@ -593,12 +604,49 @@ public class TestLRUQueryCache extends LuceneTestCase {
     dir.close();
   }
 
+  public void testConsistencyWithAccountableQueries() throws IOException {
+    var queryCache = new LRUQueryCache(1, 10000000, _ -> true, Float.POSITIVE_INFINITY);
+
+    var dir = newDirectory();
+    var writer = new RandomIndexWriter(random(), dir);
+    writer.addDocument(new Document());
+    var reader = writer.getReader();
+    var searcher = new IndexSearcher(reader);
+    searcher.setQueryCache(queryCache);
+    searcher.setQueryCachingPolicy(ALWAYS_CACHE);
+
+    queryCache.assertConsistent();
+
+    var accountableQuery = new AccountableDummyQuery();
+    searcher.count(accountableQuery);
+    var expectedRamBytesUsed =
+        HASHTABLE_RAM_BYTES_PER_ENTRY
+            + LINKED_HASHTABLE_RAM_BYTES_PER_ENTRY
+            + accountableQuery.ramBytesUsed()
+            + queryCache.getChildResources().iterator().next().ramBytesUsed();
+    assertEquals(expectedRamBytesUsed, queryCache.ramBytesUsed());
+    queryCache.assertConsistent();
+
+    queryCache.clearQuery(accountableQuery);
+    assertEquals(HASHTABLE_RAM_BYTES_PER_ENTRY, queryCache.ramBytesUsed());
+    queryCache.assertConsistent();
+
+    queryCache.clearCoreCacheKey(
+        reader.getContext().leaves().get(0).reader().getCoreCacheHelper().getKey());
+    assertEquals(0, queryCache.ramBytesUsed());
+    queryCache.assertConsistent();
+
+    reader.close();
+    writer.close();
+    dir.close();
+  }
+
   public void testOnUse() throws IOException {
     final LRUQueryCache queryCache =
         new LRUQueryCache(
             1 + random().nextInt(5),
             1 + random().nextInt(1000),
-            context -> random().nextBoolean(),
+            _ -> random().nextBoolean(),
             Float.POSITIVE_INFINITY);
 
     Directory dir = newDirectory();
@@ -668,7 +716,7 @@ public class TestLRUQueryCache extends LuceneTestCase {
   }
 
   public void testStats() throws IOException {
-    final LRUQueryCache queryCache = new LRUQueryCache(1, 10000000, context -> true, 1);
+    final LRUQueryCache queryCache = new LRUQueryCache(1, 10000000, _ -> true, 1);
 
     Directory dir = newDirectory();
     final RandomIndexWriter w = new RandomIndexWriter(random(), dir);
@@ -800,11 +848,11 @@ public class TestLRUQueryCache extends LuceneTestCase {
     final AtomicLong cacheSize = new AtomicLong();
 
     final LRUQueryCache queryCache =
-        new LRUQueryCache(2, 10000000, context -> true, 1) {
+        new LRUQueryCache(2, 10000000, _ -> true, 1) {
           @Override
           protected void onHit(Object readerCoreKey, Query query) {
             super.onHit(readerCoreKey, query);
-            switch (indexId.get(readerCoreKey).intValue()) {
+            switch (indexId.get(readerCoreKey)) {
               case 1:
                 hitCount1.incrementAndGet();
                 break;
@@ -819,7 +867,7 @@ public class TestLRUQueryCache extends LuceneTestCase {
           @Override
           protected void onMiss(Object readerCoreKey, Query query) {
             super.onMiss(readerCoreKey, query);
-            switch (indexId.get(readerCoreKey).intValue()) {
+            switch (indexId.get(readerCoreKey)) {
               case 1:
                 missCount1.incrementAndGet();
                 break;
@@ -934,8 +982,7 @@ public class TestLRUQueryCache extends LuceneTestCase {
     query.add(new BoostQuery(expectedCacheKey, 42f), Occur.MUST);
 
     final LRUQueryCache queryCache =
-        new LRUQueryCache(
-            1000000, 10000000, context -> random().nextBoolean(), Float.POSITIVE_INFINITY);
+        new LRUQueryCache(1000000, 10000000, _ -> random().nextBoolean(), Float.POSITIVE_INFINITY);
     Directory dir = newDirectory();
     final RandomIndexWriter w = new RandomIndexWriter(random(), dir);
     Document doc = new Document();
@@ -982,7 +1029,7 @@ public class TestLRUQueryCache extends LuceneTestCase {
     w.close();
 
     final LRUQueryCache queryCache =
-        new LRUQueryCache(1000000, 10000000, context -> true, Float.POSITIVE_INFINITY);
+        new LRUQueryCache(1000000, 10000000, _ -> true, Float.POSITIVE_INFINITY);
     searcher.setQueryCache(queryCache);
     searcher.setQueryCachingPolicy(ALWAYS_CACHE);
 
@@ -1014,6 +1061,65 @@ public class TestLRUQueryCache extends LuceneTestCase {
 
     reader.close();
     dir.close();
+  }
+
+  public void testQuerySizeBytesAreCached() throws IOException {
+    try (Directory dir = newDirectory();
+        RandomIndexWriter w = new RandomIndexWriter(random(), dir)) {
+      Document doc = new Document();
+      doc.add(new StringField("foo", "bar", Store.YES));
+      doc.add(new StringField("foo", "quux", Store.YES));
+      w.addDocument(doc);
+      w.commit();
+      final IndexReader reader = w.getReader();
+      final IndexSearcher searcher = newSearcher(reader);
+      final LRUQueryCache queryCache =
+          new LRUQueryCache(1000000, 10000000, _ -> true, Float.POSITIVE_INFINITY);
+      searcher.setQueryCache(queryCache);
+      searcher.setQueryCachingPolicy(ALWAYS_CACHE);
+      StringBuilder sb = new StringBuilder();
+      sb.append("a".repeat(100));
+      String term = sb.toString();
+      TermQuery termQuery = new TermQuery(new Term("foo", term));
+      long expectedQueryInBytes =
+          LINKED_HASHTABLE_RAM_BYTES_PER_ENTRY + RamUsageEstimator.sizeOf(termQuery, 32);
+      searcher.search(new ConstantScoreQuery(termQuery), 1);
+
+      assertEquals(1, queryCache.getUniqueQueries().size());
+      assertEquals(
+          expectedQueryInBytes, queryCache.getUniqueQueries().get(termQuery).queryRamBytesUsed());
+      reader.close();
+    }
+  }
+
+  public void testCacheRamBytesWithALargeTermQuery() throws IOException {
+    try (Directory dir = newDirectory();
+        RandomIndexWriter w = new RandomIndexWriter(random(), dir)) {
+      Document doc = new Document();
+      doc.add(new StringField("foo", "bar", Store.YES));
+      doc.add(new StringField("foo", "quux", Store.YES));
+      w.addDocument(doc);
+      w.commit();
+      final IndexReader reader = w.getReader();
+      final IndexSearcher searcher = newSearcher(reader);
+      final LRUQueryCache queryCache =
+          new LRUQueryCache(1000000, 10000000, _ -> true, Float.POSITIVE_INFINITY);
+      searcher.setQueryCache(queryCache);
+      searcher.setQueryCachingPolicy(ALWAYS_CACHE);
+      StringBuilder sb = new StringBuilder();
+      // Create a large string for the field value so it certainly exceeds the default query size we
+      // use ie 1024 bytes.
+      sb.append("a".repeat(1200));
+      String longTerm = sb.toString();
+      TermQuery must = new TermQuery(new Term("foo", longTerm));
+      long queryInBytes = RamUsageEstimator.sizeOf(must, 32);
+      assertTrue(queryInBytes > QUERY_DEFAULT_RAM_BYTES_USED);
+      searcher.search(new ConstantScoreQuery(must), 1);
+
+      assertEquals(1, queryCache.cachedQueries().size());
+      assertTrue(queryCache.ramBytesUsed() >= queryInBytes);
+      reader.close();
+    }
   }
 
   private static Term randomTerm() {
@@ -1088,7 +1194,7 @@ public class TestLRUQueryCache extends LuceneTestCase {
 
     final LRUQueryCache queryCache =
         new LRUQueryCache(
-            maxSize, maxRamBytesUsed, context -> random().nextBoolean(), Float.POSITIVE_INFINITY);
+            maxSize, maxRamBytesUsed, _ -> random().nextBoolean(), Float.POSITIVE_INFINITY);
     IndexSearcher uncachedSearcher = null;
     IndexSearcher cachedSearcher = null;
 
@@ -1140,7 +1246,7 @@ public class TestLRUQueryCache extends LuceneTestCase {
         throws IOException {
       return new ConstantScoreWeight(this, boost) {
         @Override
-        public Scorer scorer(LeafReaderContext context) throws IOException {
+        public ScorerSupplier scorerSupplier(LeafReaderContext context) throws IOException {
           return null;
         }
 
@@ -1179,7 +1285,7 @@ public class TestLRUQueryCache extends LuceneTestCase {
 
     // size of 1 so that 2nd query evicts from the cache
     final LRUQueryCache queryCache =
-        new LRUQueryCache(1, 10000, context -> true, Float.POSITIVE_INFINITY);
+        new LRUQueryCache(1, 10000, _ -> true, Float.POSITIVE_INFINITY);
     final IndexSearcher searcher = newSearcher(reader);
     searcher.setQueryCache(queryCache);
     searcher.setQueryCachingPolicy(ALWAYS_CACHE);
@@ -1192,9 +1298,7 @@ public class TestLRUQueryCache extends LuceneTestCase {
       // trigger an eviction
       searcher.search(new MatchAllDocsQuery(), DummyTotalHitCountCollector.createManager());
       fail();
-    } catch (
-        @SuppressWarnings("unused")
-        ConcurrentModificationException e) {
+    } catch (ConcurrentModificationException _) {
       // expected
     } catch (RuntimeException e) {
       // expected: wrapped when executor is in use
@@ -1216,7 +1320,7 @@ public class TestLRUQueryCache extends LuceneTestCase {
 
     // size of 1 byte
     final LRUQueryCache queryCache =
-        new LRUQueryCache(1, 1, context -> random().nextBoolean(), Float.POSITIVE_INFINITY);
+        new LRUQueryCache(1, 1, _ -> random().nextBoolean(), Float.POSITIVE_INFINITY);
     final IndexSearcher searcher = newSearcher(reader);
     searcher.setQueryCache(queryCache);
     searcher.setQueryCachingPolicy(ALWAYS_CACHE);
@@ -1258,8 +1362,7 @@ public class TestLRUQueryCache extends LuceneTestCase {
         final FrequencyCountingPolicy policy = new FrequencyCountingPolicy();
         final IndexSearcher indexSearcher = new IndexSearcher(indexReader);
         indexSearcher.setQueryCache(
-            new LRUQueryCache(
-                100, 10240, context -> random().nextBoolean(), Float.POSITIVE_INFINITY));
+            new LRUQueryCache(100, 10240, _ -> random().nextBoolean(), Float.POSITIVE_INFINITY));
         indexSearcher.setQueryCachingPolicy(policy);
         final Query foo = new TermQuery(new Term("f", "foo"));
         final Query bar = new TermQuery(new Term("f", "bar"));
@@ -1294,11 +1397,7 @@ public class TestLRUQueryCache extends LuceneTestCase {
     public void onUse(final Query query) {
       AtomicInteger count;
       synchronized (counts) {
-        count = counts.get(query);
-        if (count == null) {
-          count = new AtomicInteger();
-          counts.put(query, count);
-        }
+        count = counts.computeIfAbsent(query, _ -> new AtomicInteger());
       }
       count.incrementAndGet();
     }
@@ -1321,15 +1420,30 @@ public class TestLRUQueryCache extends LuceneTestCase {
     }
 
     @Override
-    public Scorer scorer(LeafReaderContext context) throws IOException {
-      scorerCalled.set(true);
-      return in.scorer(context);
-    }
+    public ScorerSupplier scorerSupplier(LeafReaderContext context) throws IOException {
+      final var scorerSupplier = in.scorerSupplier(context);
+      if (scorerSupplier == null) {
+        return null;
+      }
+      final var scorer = scorerSupplier.get(Long.MAX_VALUE);
+      return new ScorerSupplier() {
+        @Override
+        public Scorer get(long leadCost) throws IOException {
+          scorerCalled.set(true);
+          return scorer;
+        }
 
-    @Override
-    public BulkScorer bulkScorer(LeafReaderContext context) throws IOException {
-      bulkScorerCalled.set(true);
-      return in.bulkScorer(context);
+        @Override
+        public BulkScorer bulkScorer() throws IOException {
+          bulkScorerCalled.set(true);
+          return in.bulkScorer(context);
+        }
+
+        @Override
+        public long cost() {
+          return scorer.iterator().cost();
+        }
+      };
     }
   }
 
@@ -1343,16 +1457,15 @@ public class TestLRUQueryCache extends LuceneTestCase {
     LeafReaderContext leaf = searcher.getIndexReader().leaves().get(0);
     AtomicBoolean scorerCalled = new AtomicBoolean();
     AtomicBoolean bulkScorerCalled = new AtomicBoolean();
-    LRUQueryCache cache =
-        new LRUQueryCache(1, Long.MAX_VALUE, context -> true, Float.POSITIVE_INFINITY);
+    LRUQueryCache cache = new LRUQueryCache(1, Long.MAX_VALUE, _ -> true, Float.POSITIVE_INFINITY);
 
     // test that the bulk scorer is propagated when a scorer should not be cached
     Weight weight = searcher.createWeight(new MatchAllDocsQuery(), ScoreMode.COMPLETE_NO_SCORES, 1);
     weight = new WeightWrapper(weight, scorerCalled, bulkScorerCalled);
     weight = cache.doCache(weight, NEVER_CACHE);
     weight.bulkScorer(leaf);
-    assertEquals(true, bulkScorerCalled.get());
-    assertEquals(false, scorerCalled.get());
+    assertTrue(bulkScorerCalled.get());
+    assertFalse(scorerCalled.get());
     assertEquals(0, cache.getCacheCount());
 
     searcher.getIndexReader().close();
@@ -1366,7 +1479,7 @@ public class TestLRUQueryCache extends LuceneTestCase {
     final DirectoryReader reader = w.getReader();
     final IndexSearcher searcher = newSearcher(reader);
     final LRUQueryCache queryCache =
-        new LRUQueryCache(2, 100000, context -> true, Float.POSITIVE_INFINITY) {
+        new LRUQueryCache(2, 100000, _ -> true, Float.POSITIVE_INFINITY) {
           @Override
           protected void onDocIdSetEviction(
               Object readerCoreKey, int numEntries, long sumRamBytesUsed) {
@@ -1480,7 +1593,7 @@ public class TestLRUQueryCache extends LuceneTestCase {
 
     // don't cache if the reader does not expose a cache helper
     assertNull(reader.leaves().get(0).reader().getCoreCacheHelper());
-    LRUQueryCache cache = new LRUQueryCache(2, 10000, context -> true, Float.POSITIVE_INFINITY);
+    LRUQueryCache cache = new LRUQueryCache(2, 10000, _ -> true, Float.POSITIVE_INFINITY);
     searcher.setQueryCache(cache);
     assertEquals(0, searcher.count(new DummyQuery()));
     assertEquals(0, cache.getCacheCount());
@@ -1502,7 +1615,7 @@ public class TestLRUQueryCache extends LuceneTestCase {
         }
 
         @Override
-        public Scorer scorer(LeafReaderContext context) throws IOException {
+        public ScorerSupplier scorerSupplier(LeafReaderContext context) throws IOException {
           return null;
         }
 
@@ -1541,7 +1654,7 @@ public class TestLRUQueryCache extends LuceneTestCase {
     IndexSearcher searcher = newSearcher(reader);
     searcher.setQueryCachingPolicy(ALWAYS_CACHE);
 
-    LRUQueryCache cache = new LRUQueryCache(2, 10000, context -> true, Float.POSITIVE_INFINITY);
+    LRUQueryCache cache = new LRUQueryCache(2, 10000, _ -> true, Float.POSITIVE_INFINITY);
     searcher.setQueryCache(cache);
 
     assertEquals(0, searcher.count(new NoCacheQuery()));
@@ -1574,23 +1687,18 @@ public class TestLRUQueryCache extends LuceneTestCase {
         throws IOException {
       return new ConstantScoreWeight(this, boost) {
         @Override
-        public Scorer scorer(LeafReaderContext context) throws IOException {
-          return scorerSupplier(context).get(Long.MAX_VALUE);
-        }
-
-        @Override
         public boolean isCacheable(LeafReaderContext ctx) {
           return true;
         }
 
         @Override
         public ScorerSupplier scorerSupplier(LeafReaderContext context) throws IOException {
-          final Weight weight = this;
+          final var scorer = new ConstantScoreScorer(boost, scoreMode, DocIdSetIterator.all(1));
           return new ScorerSupplier() {
             @Override
             public Scorer get(long leadCost) throws IOException {
               scorerCreated.set(true);
-              return new ConstantScoreScorer(weight, boost, scoreMode, DocIdSetIterator.all(1));
+              return scorer;
             }
 
             @Override
@@ -1675,12 +1783,21 @@ public class TestLRUQueryCache extends LuceneTestCase {
     public Weight createWeight(IndexSearcher searcher, ScoreMode scoreMode, float boost)
         throws IOException {
       return new ConstantScoreWeight(this, 1) {
-
         @Override
-        public Scorer scorer(LeafReaderContext context) throws IOException {
-          scorerCreatedCount.incrementAndGet();
-          return new ConstantScoreScorer(
-              this, 1, scoreMode, DocIdSetIterator.all(context.reader().maxDoc()));
+        public ScorerSupplier scorerSupplier(LeafReaderContext context) throws IOException {
+          return new ScorerSupplier() {
+            @Override
+            public Scorer get(long leadCost) throws IOException {
+              scorerCreatedCount.incrementAndGet();
+              return new ConstantScoreScorer(
+                  1, scoreMode, DocIdSetIterator.all(context.reader().maxDoc()));
+            }
+
+            @Override
+            public long cost() {
+              return context.reader().maxDoc();
+            }
+          };
         }
 
         @Override
@@ -1709,7 +1826,7 @@ public class TestLRUQueryCache extends LuceneTestCase {
     IndexSearcher searcher = new AssertingIndexSearcher(random(), reader);
     searcher.setQueryCachingPolicy(ALWAYS_CACHE);
 
-    LRUQueryCache cache = new LRUQueryCache(1, 10000, context -> true, Float.POSITIVE_INFINITY);
+    LRUQueryCache cache = new LRUQueryCache(1, 10000, _ -> true, Float.POSITIVE_INFINITY);
     searcher.setQueryCache(cache);
 
     DVCacheQuery query = new DVCacheQuery("field");
@@ -1742,7 +1859,7 @@ public class TestLRUQueryCache extends LuceneTestCase {
     assertEquals(2, searcher.count(query));
     assertEquals(2, query.scorerCreatedCount.get()); // both segments cached
 
-    w.updateNumericDocValue(new Term("text", "text"), "field", 2l);
+    w.updateNumericDocValue(new Term("text", "text"), "field", 2L);
     reader.close();
     reader = DirectoryReader.open(w);
     searcher =
@@ -1767,7 +1884,7 @@ public class TestLRUQueryCache extends LuceneTestCase {
     IndexWriterConfig iwc = newIndexWriterConfig().setSoftDeletesField("soft_delete");
     IndexWriter w = new IndexWriter(dir, iwc);
     LRUQueryCache queryCache =
-        new LRUQueryCache(10, 1000 * 1000, ctx -> true, Float.POSITIVE_INFINITY);
+        new LRUQueryCache(10, 1000 * 1000, _ -> true, Float.POSITIVE_INFINITY);
     IndexSearcher.setDefaultQueryCache(queryCache);
     IndexSearcher.setDefaultQueryCachingPolicy(ALWAYS_CACHE);
 
@@ -1848,7 +1965,7 @@ public class TestLRUQueryCache extends LuceneTestCase {
     DirectoryReader reader = DirectoryReader.open(w);
     DirectoryReader noCacheReader = new DummyDirectoryReader(reader);
 
-    LRUQueryCache cache = new LRUQueryCache(1, 100000, context -> true, Float.POSITIVE_INFINITY);
+    LRUQueryCache cache = new LRUQueryCache(1, 100000, _ -> true, Float.POSITIVE_INFINITY);
     IndexSearcher searcher = new AssertingIndexSearcher(random(), reader);
     searcher.setQueryCache(cache);
     searcher.setQueryCachingPolicy(ALWAYS_CACHE);
@@ -1894,7 +2011,11 @@ public class TestLRUQueryCache extends LuceneTestCase {
     doc2.add(new StringField("name", "alice", Store.YES));
     doc2.add(new LongPoint("age", 20));
     doc2.add(new SortedNumericDocValuesField("age", 20));
-    w.addDocuments(Arrays.asList(doc1, doc2));
+    Document doc3 = new Document();
+    doc3.add(new StringField("name", "steve", Store.YES));
+    doc3.add(new LongPoint("age", 25));
+    doc3.add(new SortedNumericDocValuesField("age", 25));
+    w.addDocuments(Arrays.asList(doc1, doc2, doc3));
     final IndexReader reader = w.getReader();
     final IndexSearcher searcher = newSearcher(reader);
     searcher.setQueryCachingPolicy(ALWAYS_CACHE);
@@ -1905,13 +2026,13 @@ public class TestLRUQueryCache extends LuceneTestCase {
     TermQuery subQuery1 = new TermQuery(new Term("name", "tom"));
     IndexOrDocValuesQuery subQuery2 =
         new IndexOrDocValuesQuery(
-            LongPoint.newRangeQuery("age", 10, 30),
-            SortedNumericDocValuesField.newSlowRangeQuery("age", 10, 30));
+            LongPoint.newRangeQuery("age", 10, 20),
+            SortedNumericDocValuesField.newSlowRangeQuery("age", 10, 20));
     BooleanQuery query = bq.add(subQuery1, Occur.FILTER).add(subQuery2, Occur.FILTER).build();
     Set<Query> cacheSet = new HashSet<>();
 
     // only term query is cached
-    final LRUQueryCache partCache = new LRUQueryCache(1000000, 10000000, context -> true, 1);
+    final LRUQueryCache partCache = new LRUQueryCache(1000000, 10000000, _ -> true, 1);
     searcher.setQueryCache(partCache);
     searcher.search(query, 1);
     cacheSet.add(subQuery1);
@@ -1919,7 +2040,7 @@ public class TestLRUQueryCache extends LuceneTestCase {
 
     // both queries are cached
     final LRUQueryCache allCache =
-        new LRUQueryCache(1000000, 10000000, context -> true, Float.POSITIVE_INFINITY);
+        new LRUQueryCache(1000000, 10000000, _ -> true, Float.POSITIVE_INFINITY);
     searcher.setQueryCache(allCache);
     searcher.search(query, 1);
     cacheSet.add(subQuery2);
@@ -2000,14 +2121,14 @@ public class TestLRUQueryCache extends LuceneTestCase {
     Set<Query> cacheSet = new HashSet<>();
 
     // both queries are not cached
-    final LRUQueryCache partCache = new LRUQueryCache(1000000, 10000000, context -> true, 1);
+    final LRUQueryCache partCache = new LRUQueryCache(1000000, 10000000, _ -> true, 1);
     searcher.setQueryCache(partCache);
     searcher.search(query, 1);
     assertEquals(cacheSet, new HashSet<>(partCache.cachedQueries()));
 
     // only subQuery1 is cached
     final LRUQueryCache allCache =
-        new LRUQueryCache(1000000, 10000000, context -> true, Float.POSITIVE_INFINITY);
+        new LRUQueryCache(1000000, 10000000, _ -> true, Float.POSITIVE_INFINITY);
     searcher.setQueryCache(allCache);
     searcher.search(query, 1);
     cacheSet.add(subQuery1);
@@ -2038,7 +2159,7 @@ public class TestLRUQueryCache extends LuceneTestCase {
       IndexSearcher searcher = newSearcher(reader);
       searcher.setQueryCachingPolicy(ALWAYS_CACHE);
       LRUQueryCache allCache =
-          new LRUQueryCache(1000000, 10000000, context -> true, Float.POSITIVE_INFINITY);
+          new LRUQueryCache(1000000, 10000000, _ -> true, Float.POSITIVE_INFINITY);
       searcher.setQueryCache(allCache);
       Weight weight = searcher.createWeight(query, ScoreMode.COMPLETE_NO_SCORES, 1);
       LeafReaderContext context = getOnlyLeafReader(reader).getContext();
@@ -2056,7 +2177,7 @@ public class TestLRUQueryCache extends LuceneTestCase {
       IndexSearcher searcher = newSearcher(reader);
       searcher.setQueryCachingPolicy(ALWAYS_CACHE);
       LRUQueryCache allCache =
-          new LRUQueryCache(1000000, 10000000, context -> true, Float.POSITIVE_INFINITY);
+          new LRUQueryCache(1000000, 10000000, _ -> true, Float.POSITIVE_INFINITY);
       searcher.setQueryCache(allCache);
       Weight weight = searcher.createWeight(query, ScoreMode.COMPLETE_NO_SCORES, 1);
       LeafReaderContext context = getOnlyLeafReader(reader).getContext();
@@ -2070,6 +2191,69 @@ public class TestLRUQueryCache extends LuceneTestCase {
     }
 
     w.close();
+    dir.close();
+  }
+
+  public void testSkipCacheFactorWithDynamicValues() throws IOException {
+    Directory dir = newDirectory();
+    final RandomIndexWriter w = new RandomIndexWriter(random(), dir);
+    Document doc1 = new Document();
+    doc1.add(new StringField("name", "tom", Store.YES));
+    doc1.add(new StringField("hobby", "movie", Store.YES));
+    Document doc2 = new Document();
+    doc2.add(new StringField("name", "alice", Store.YES));
+    doc2.add(new StringField("hobby", "book", Store.YES));
+    Document doc3 = new Document();
+    doc3.add(new StringField("name", "alice", Store.YES));
+    doc3.add(new StringField("hobby", "movie", Store.YES));
+    w.addDocuments(Arrays.asList(doc1, doc2, doc3));
+    final IndexReader reader = w.getReader();
+    final IndexSearcher searcher = newSearcher(reader);
+    final QueryCachingPolicy policy =
+        new QueryCachingPolicy() {
+
+          @Override
+          public boolean shouldCache(Query query) throws IOException {
+            return query.getClass() != TermQuery.class;
+          }
+
+          @Override
+          public void onUse(Query query) {
+            // no-op
+          }
+        };
+    searcher.setQueryCachingPolicy(policy);
+    w.close();
+
+    // lead cost is 2, cost of subQuery1 is 3, cost of subQuery2 is 2
+    BooleanQuery.Builder inner = new BooleanQuery.Builder();
+    TermQuery innerSubQuery1 = new TermQuery(new Term("hobby", "book"));
+    TermQuery innerSubQuery2 = new TermQuery(new Term("hobby", "movie"));
+    BooleanQuery subQuery1 =
+        inner.add(innerSubQuery1, Occur.SHOULD).add(innerSubQuery2, Occur.SHOULD).build();
+
+    BooleanQuery.Builder bq = new BooleanQuery.Builder();
+    TermQuery subQuery2 = new TermQuery(new Term("name", "alice"));
+    BooleanQuery query =
+        bq.add(new ConstantScoreQuery(subQuery1), Occur.FILTER)
+            .add(subQuery2, Occur.FILTER)
+            .build();
+    Set<Query> cacheSet = new HashSet<>();
+
+    // Define skip cache factor to be 1, so that query is not cached.
+    final LRUQueryCache cache = new LRUQueryCache(1000000, 10000000, _ -> true, 1.0f);
+    searcher.setQueryCache(cache);
+    searcher.search(query, 1);
+    assertEquals(cacheSet, new HashSet<>(cache.cachedQueries()));
+    assertEquals(1.0, cache.getSkipCacheFactor(), 0);
+
+    // Now change the skipCacheFactor to 3.0f, now same query should get cached.
+    cache.setSkipCacheFactor(3.0f);
+    searcher.search(query, 1);
+    assertEquals(new HashSet<>(List.of(subQuery1)), new HashSet<>(cache.cachedQueries()));
+    assertEquals(3.0, cache.getSkipCacheFactor(), 0);
+
+    reader.close();
     dir.close();
   }
 }
