@@ -24,7 +24,6 @@ import java.awt.FlowLayout;
 import java.awt.Window;
 import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
 import javax.swing.BorderFactory;
 import javax.swing.JButton;
 import javax.swing.JDialog;
@@ -45,6 +44,7 @@ import org.apache.lucene.luke.models.analysis.Analysis;
 /** Factory of token attribute dialog */
 public final class TokenAttributeDialogFactory implements DialogOpener.DialogFactory {
 
+  @SuppressWarnings("NonFinalStaticField")
   private static TokenAttributeDialogFactory instance;
 
   private final Preferences prefs;
@@ -103,7 +103,7 @@ public final class TokenAttributeDialogFactory implements DialogOpener.DialogFac
                 att ->
                     att.getAttValues().entrySet().stream()
                         .map(e -> TokenAttValue.of(att.getAttClass(), e.getKey(), e.getValue())))
-            .collect(Collectors.toList());
+            .toList();
     TableUtils.setupTable(
         attributesTable,
         ListSelectionModel.SINGLE_SELECTION,
@@ -114,7 +114,7 @@ public final class TokenAttributeDialogFactory implements DialogOpener.DialogFac
     JPanel footer = new JPanel(new FlowLayout(FlowLayout.TRAILING));
     footer.setOpaque(false);
     JButton okBtn = new JButton(MessageUtils.getLocalizedMessage("button.ok"));
-    okBtn.addActionListener(e -> dialog.dispose());
+    okBtn.addActionListener(_ -> dialog.dispose());
     footer.add(okBtn);
     panel.add(footer, BorderLayout.PAGE_END);
 
